src/expr/src/scalar/func/snapshots/mz_expr__scalar__func__macros__test__fallible2__impl.snap
---
source: src/expr/src/scalar/func/macros.rs
expression: info
---
Info {
    output_type_nullable: SqlColumnType {
        scalar_type: Float32,
        nullable: false,
    },
    output_type_nonnullable: SqlColumnType {
        scalar_type: Float32,
        nullable: false,
    },
    preserves_uniqueness: false,
    inverse: None,
    is_monotone: false,
    propagates_nulls: false,
    introduces_nulls: false,
    could_error: true,
}
