src/expr/src/scalar/func/snapshots/mz_expr__scalar__func__macros__test__fallible2__sqlfunc_macro.snap
---
source: src/expr/src/scalar/func/macros.rs
expression: info
---
Info {
    output_type_nullable: ColumnType {
        scalar_type: Float32,
        nullable: false,
    },
    output_type_nonnullable: ColumnType {
        scalar_type: Float32,
        nullable: false,
    },
    preserves_uniqueness: false,
    inverse: None,
    is_monotone: false,
    propagates_nulls: false,
    introduces_nulls: false,
    could_error: true,
}
